# sgx-scaffold

./: Cargo.toml  README.md
app/: Cargo.toml  build.rs
app/sgx/: config.xml  enclave.edl  enclave.lds
app/src/: main.rs
docker/22.04/: Dockerfile
docker/WIP - ubuntu 22.04/: docker-compose.yaml
docker/WIP-22.04/: docker-compose.yaml
docker/ubuntu 20.04/: Dockerfile  docker-compose.yaml
docker/ubuntu 22.04/: Dockerfile  docker-compose.yaml
docker/ubuntu-20.04/: Dockerfile  docker-compose.yaml
docker/ubuntu-22.04/: Dockerfile  docker-compose.yaml
enclave/: Cargo.toml
enclave/src/: lib.rs
mock-lib/: Cargo.toml
mock-lib/src/: lib.rs
untrusted_lib/: Cargo.toml
untrusted_lib/src/: lib.rs
