[workspace]
resolver = "2"
members = ["app", "enclave", "untrusted_lib"]

[workspace.package]
name = "sgx-template"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[workspace.dependencies]
automata-sgx-builder = { git = "https://github.com/automata-network/automata-sgx-builder", branch = "v2.0.0-nightly-2024-02-01" }
untrusted_lib = { path = "untrusted_lib" }
# Use external libraries in the enclave
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }