[workspace]
resolver = "2"
members = ["app", "enclave", "mock-lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[workspace.dependencies]
automata-sgx-sdk = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }
automata-build-script = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }
mock-lib = { path = "mock-lib" }
# Use external libraries in the enclave
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
hex = "0.4"
alloy-chains = "=0.1.36"

